--- a/src/components/Styles/TodoApp.css
+++ b/src/components/Styles/TodoApp.css
@@ -19,7 +19,7 @@
     .todoFormContainer {
         
         height: 100%; 
-        width: 82%; 
+        width: 90%; 
         background-color: white;
     }
 
