--- a/src/components/Styles/TodoForm.css
+++ b/src/components/Styles/TodoForm.css
@@ -71,5 +71,15 @@
     
     }
 
+    .formStyles  {
+        width: 100%;
+        height: 45px;
+        display: flex; 
+        justify-content: center; 
+        margin-top: 30px;
+    
+    }
+    
+
     
 }
